--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,18 @@
 {
     "python.autoComplete.extraPaths": [
         "C:\\Program Files\\Krita (x64)\\lib\\krita-python-libs",
-        "C:\\Program Files\\Krita (x64)\\lib\\site-packages"
+        "C:\\Program Files\\Krita (x64)\\lib\\site-packages",
+        "venv\\Lib\\site-packages"
     ],
     "python.analysis.extraPaths": [
         "C:\\Program Files\\Krita (x64)\\lib\\krita-python-libs",
-        "C:\\Program Files\\Krita (x64)\\lib\\site-packages"
+        "C:\\Program Files\\Krita (x64)\\lib\\site-packages",
+        "venv\\Lib\\site-packages"
     ],
     "python.analysis.include":[
         "C:\\Program Files\\Krita (x64)\\lib\\krita-python-libs",
-        "C:\\Program Files\\Krita (x64)\\lib\\site-packages"
+        "C:\\Program Files\\Krita (x64)\\lib\\site-packages",
+        "venv\\Lib\\site-packages"
     ],
     "python.analysis.typeCheckingMode": "basic"
 }
